force-app/main/default/objects/sfmc_einstein_email_scores_534007695__dll/fields/EmailOpenScore__c.field-meta.xml
<CustomField>
    <fullName>EmailOpenScore__c</fullName>
    <label>Email Open Score</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailOpenScore</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>