force-app/main/default/objects/sfmc_einstein_email_scores_534007695__dll/fields/EmailSubscribeLikelihood__c.field-meta.xml
<CustomField>
    <fullName>EmailSubscribeLikelihood__c</fullName>
    <label>Email Subscribe Likelihood</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailSubscribeLikelihood</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>